--- a/Index.html
+++ b/Index.html
@@ -83,8 +83,8 @@
             <input type="tel" id="telNumResp1" name="telNumResp1" class="telefono-numero form-cache" placeholder="Número (sin 15)" required pattern="^[0-9]{6,10}$" title="Ingrese el número de teléfono sin el 15 inicial.">
           </div>
 
-          <label for="adultoResponsable2">Responsable 2: (Nombre y Apellido) (Opcional)</label>
-          <input type="text" id="adultoResponsable2" name="adultoResponsable2" class="form-cache">
+          <label for="adultoResponsable2">Responsable 2:(Opcional)</label>
+          <input type="text" id="adultoResponsable2" name="adultoResponsable2" class="form-cache" placeholder="Nombre y Apellido">
 
           <label for="telAreaResp2">Teléfono Responsable 2: (Opcional)</label>
           <div class="grupo-telefono">
@@ -93,7 +93,7 @@
           </div>
 
           <label for="email">Email (Contacto Principal 1):</label>
-          <input type="email" id="email" name="email" class="form-cache" required>
+          <input type="email" id="email" name="email" class="form-cache" placeholder="micorreo@midominio.com" required>
 
           <label style="margin-top: 20px;">Personas autorizadas a retirar: (Mínimo 1)</label>
           <div id="autorizados-container">
