--- a/styleHead.html
+++ b/styleHead.html
@@ -43,8 +43,8 @@
     gap: 10px;
   }
 
-  /* (Punto 10) Estilos para Transferencia */
-  #transferencia-info {
+  /* (Punto 10 y 33) Estilos para Transferencia y Cuotas-Transferencia */
+  #transferencia-info, #cuotas-transferencia-info {
     background-color: #fdf5e6;
     border: 1px solid #e67e22;
     padding: 15px;
@@ -52,18 +52,27 @@
     margin-top: 10px;
   }
 
-  #transferencia-info p {
+  #transferencia-info p, #cuotas-transferencia-info p {
     margin: 5px 0;
-    font-weight: bold;
+    font-weight: normal; /* <-- MODIFICADO: quitado el bold general */
   }
 
-  #transferencia-info strong {
+  #transferencia-info strong, #cuotas-transferencia-info strong {
     font-family: monospace;
     font-size: 1.1em;
     color: #c0392b;
+    font-weight: bold; /* <-- Asegurarse que los strong sean bold */
+  }
+  
+  /* (NUEVO) Anulación para los <strong> de las fechas (para que no sean monospace) */
+  #cuotas-transferencia-info .cuotas-fechas strong {
+    font-family: 'Arial', sans-serif;
+    color: var(--color-texto, #333); /* Heredar color de texto normal */
+    font-size: 1em;
   }
 
-  #btn-copiar-alias {
+
+  #btn-copiar-alias, #btn-copiar-alias-cuotas {
     background-color: #e67e22;
     color: white;
     padding: 8px 12px;
@@ -75,7 +84,7 @@
     transition: background-color 0.3s;
   }
 
-  #btn-copiar-alias:hover {
+  #btn-copiar-alias:hover, #btn-copiar-alias-cuotas:hover {
     background-color: #d35400;
   }
 
@@ -130,20 +139,8 @@
     cursor: not-allowed;
     color: #555555;
   }
-  /* (NUEVO) Estilo para el aviso de fechas de cuotas en el formulario */
-  #cuotas-info {
-    display: none; /* Oculto por defecto */
-    background-color: #fff3cd; /* Amarillo (aviso) */
-    color: #856404;
-    border: 1px solid #ffeeba;
-    padding: 15px;
-    border-radius: 5px;
-    margin-top: 10px;
-  }
-  #cuotas-info p {
-    margin: 5px 0;
-    font-weight: normal;
-  }
+
+  /* (ELIMINADO) El bloque #cuotas-info se borró de aquí */
   
   /* (NUEVO) Estilo para el aviso de fecha de cuota en la pantalla de RE-PAGO */
   .mensaje-cuota {
